Fix centering, alignment, and spacing

--- a/src/client/static/less/carvis.less
+++ b/src/client/static/less/carvis.less
@@ -315,8 +315,6 @@ body {
 
 .carIcon {
   width: 100px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .about {
@@ -333,7 +331,8 @@ body {
 }
 
 .carIconHolder img {
-  margin: 0 auto;
+  margin: 10px auto;
+  display: flex;
 }
 
 .jarvisbg {
